changed node version

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Checkout Repo
       uses: actions/checkout@v2
+      with:
+          node-version: '14'
 
     - name: Terraform Setup
       uses: hashicorp/setup-terraform@v1
