--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,9 +14,11 @@ jobs:
     steps:
 
     - name: Checkout Repo
-      uses: actions/checkout@v2
+    
+    
+    - uses: actions/setup-node@v2
       with:
-          node-version: '14'
+      node-version: '14'
 
     - name: Terraform Setup
       uses: hashicorp/setup-terraform@v1
