--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: self-hosted
     steps:
 
-    - name: Checkout Repo
+    - name: Checkout code
+        uses: actions/checkout@v2
     
     
     - uses: actions/setup-node@v2
