--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -1,13 +1,24 @@
+name: test
+
 on:
   workflow_dispatch:
-
+ 
+  
 jobs:
   sync:
     runs-on: self-hosted
-    
-  - name: Reuse Terraform apply template
-    uses: tikenek/Sequoia-pj/.github/workflows/template-apply.yml
-    secrets:
-    env_aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
-    env_aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-    env_aws_session_token: ${{secrets.AWS_SESSION_TOKEN}} 
+
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: test terraform apply workflow 
+        uses: tikenek/github_runners/.github/workflows/terraform.yml@v1.0.0.b
+        with:
+          # URL of gitHub public upstream repo
+         # upstream_repo: "https://github.com/actions/starter-workflows.git"
+          # Branch to merge from upstream (defaults to downstream branch)
+          upstream_branch: master #main
+          # Branch to merge into downstream
+          downstream_branch: master
+          # GitHub Bot token
+          token: ${{ secrets.GITHUB_TOKEN }}
