--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -3,7 +3,12 @@ name: test
 on:
   workflow_dispatch:
  
-  
+env:
+    AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+    AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+    AWS_SESSION_TOKEN: ${{secrets.AWS_SESSION_TOKEN}}
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
 jobs:
   sync:
     runs-on: self-hosted
