--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -10,21 +10,13 @@ env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
 jobs:
+  call-workflow:
+    uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@v1
   sync:
     runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v2
       
-      - name: test terraform apply workflow 
-        uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@v1.0.0.b
-        
-        with:
-          # URL of gitHub public upstream repo
-         # upstream_repo: "https://github.com/actions/starter-workflows.git"
-          # Branch to merge from upstream (defaults to downstream branch)
-          upstream_branch: master #main
-          # Branch to merge into downstream
-          downstream_branch: master
  
 
