--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -1,7 +1,14 @@
-name: test
+name: Call a reusable workflow
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - master
+
+jobs:
+  call-workflow:
+    uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@@v1
+
  
 env:
     AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
@@ -9,14 +16,7 @@ env:
     AWS_SESSION_TOKEN: ${{secrets.AWS_SESSION_TOKEN}}
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
-jobs:
-  call-workflow:
-    uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@v1
-  sync:
-    runs-on: self-hosted
 
-    steps:
-      - uses: actions/checkout@v2
-      
- 
+
+
 
