--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -1,20 +1,19 @@
-name: Call a reusable workflow
+name: Terraform--Manager
 
-on:
-  pull_request:
-    branches:
-      - master
+on: 
+  workflow_dispatch:
+  
 
-jobs:
-  call-workflow:
-    uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@v1
- 
-env:
-    AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-    AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-    AWS_SESSION_TOKEN: ${{secrets.AWS_SESSION_TOKEN}}
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
+jobs: 
+   uses: .github/workflows/terraform-template-apply.yml
+    secrets:
+      env_aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
+      env_aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+      env_github_token: ${{secrets.GITHUB_TOKEN}}
+       
+       
+      
+
 
 
 
