--- a/.github/workflows/newnewnew.yml
+++ b/.github/workflows/newnewnew.yml
@@ -5,16 +5,12 @@ on:
   
 
 jobs: 
-   uses: .github/workflows/terraform-template-apply.yml
-    secrets:
-      env_aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
-      env_aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-      env_github_token: ${{secrets.GITHUB_TOKEN}}
+   uses: tikenek/terraform-adding-users/.github/workflows/terraform-template-apply.yml@v1
+   secrets:
+     env_aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
+     env_aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+     env_github_token: ${{secrets.GITHUB_TOKEN}}
        
-       
-      
-
-
 
 
 
