--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -1,4 +1,4 @@
-name: Terraform--Manager
+name: Terraform test reusable
 
 on: 
   workflow_dispatch:
@@ -10,4 +10,3 @@ jobs:
      env_aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
      env_aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
      env_github_token: ${{secrets.GITHUB_TOKEN}}
-       
