--- a/.github/workflows/terraform-template-apply.yml
+++ b/.github/workflows/terraform-template-apply.yml
@@ -7,10 +7,17 @@ on:
 #        description: 'Specifies the path of the root terraform module.'
 #        required: true
 #        type: string
-    secrets:
-      env:
-        required: true 
- 
+#    secrets:
+#      env:
+#        required: true 
+     secrets:
+      env_aws_access_key_id:
+        required: true
+      env_aws_secret_access_key:
+        required: true
+      env_github_token:
+        required: true
+        
 env:
     AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
     AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
